更新 _locales/ja/SSD1306_OLED-strings.json

--- a/_locales/ja/SSD1306_OLED-strings.json
+++ b/_locales/ja/SSD1306_OLED-strings.json
@@ -1,14 +1,14 @@
 {
-    "OLED.clear|block": "清除显示",
-    "OLED.drawLine|block": "画线条 起点:|x: $x0 y: $y0 终点| x: $x1 y: $y1",
-    "OLED.drawLoading|block": "显示进度条 $percent %",
-    "OLED.drawRectangle|block": "绘制矩形 起点:|x: $x0 y: $y0 终点| x: $x1 y: $y1",
-    "OLED.init|block": "OLED 初始化 宽 %width 高 %height",
-    "OLED.newLine|block": "新行",
-    "OLED.writeNumNewLine|block": "显示数字 $n",
-    "OLED.writeNum|block": "新行显示数字 $n",
-    "OLED.writeStringNewLine|block": "新行显示字符串 $str",
-    "OLED.writeString|block": "显示字符串 $str",
+    "OLED.clear|block": "画面をクリア",
+    "OLED.drawLine|block": "線を描く 起点:|x: $x0 y: $y0 終点| x: $x1 y: $y1",
+    "OLED.drawLoading|block": "パーセントを表示 $percent %",
+    "OLED.drawRectangle|block": "矩形を表示 起点:|x: $x0 y: $y0 終点| x: $x1 y: $y1",
+    "OLED.init|block": "OLED 初期あ 幅 %width 高さ %height",
+    "OLED.newLine|block": "開業",
+    "OLED.writeNumNewLine|block": "開業して数字を表示 $n",
+    "OLED.writeNum|block": "数字を表示 $n",
+    "OLED.writeStringNewLine|block": "改行して文字を表示 $str",
+    "OLED.writeString|block": "文字を表示 $str",
     "{id:category}Math": "Math",
     "{id:category}OLED": "OLED"
 }
